# wuerfel

./: .gitignore  Cargo.toml  run.sh
frontend/: GameBoard.ts  WebSocketManager.ts  app.ts  index.html  package-lock.json  package.json  styles.css  tsconfig.json
game/: Cargo.toml
game/client/: Cargo.toml
game/client/src/: com.rs  graphics.rs  lib.rs  net.rs
game/client/src/graphics/: zoom_handler.rs
game/client/src/net/: packets.rs
game/macros/: Cargo.toml
game/server/: Cargo.toml
game/server/src/: game.rs  main.rs  net.rs
game/server/src/net/: packets.rs
game/shared/src/: game.rs  net.rs
game/shared/src/net/: packets.rs  primitives.rs  readwrite.rs
game/shared/src/net/packets/: join.rs  join_response.rs
game/shared/src/net/primitives/: bool.rs  color.rs  game_snapshot.rs  map_config.rs  numbers.rs  option.rs  position.rs  square.rs  string.rs  vec.rs
scripts/: build_client.sh  build_server.sh  dev.sh
src/: game.rs  main.rs  schemas.rs
src/game/: player.rs
web/: index.html  index.js
