[package]
name = "wuerfel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3"
warp = { version = "0.4.2", features = ["websocket", "server"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
