[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebSocket",
    "CanvasRenderingContext2d",
    "ProgressEvent",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
]}
shared = { path = "../shared" }
futures = "0.3.31"
