[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
shared = { path = "../shared" }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }
